--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,19 @@ img {
 .next {
   right: 10px;
 }
+
+@media (max-width: 768px){
+  h1 {
+    font-size: 16px;
+  }
+  nav {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  nav ul li a {
+    margin: 0;
+    padding: 5px;
+    display: inline-flex;
+  }
+}
